name:          Ampersand-Prototype
version:       2.0.0
author:        Stef Joosten
maintainer:    stef.joosten@ou.nl
synopsis:      Toolsuite for automated design of business processes.
description:   You can define your business processes by means of rules, written in Relation Algebra.
               Ampersand compiles this into functional specifications, which define an information system to support that business process.
               Behold: a genuine real world application of Relation Algebra, which is being used in industry.
homepage:      ampersand.sourceforge.net
category:      Database Design
stability:     alpha
Cabal-Version: >= 1.6
build-type:    Simple
license:       OtherLicense
copyright:     Stef Joosten

Executable prototype
  Main-Is:         Main.hs
  Hs-Source-Dirs:  src
  build-depends:
      Ampersand  >= 2.0.0 ,  
      graphviz   >= 2999.11.0.0 && < 3000 ,
      HDBC-odbc  == 2.2.3.0,  
      bytestring >= 0.9.1.5 && < 0.10,
      utf8-string>= 0.3.6,
      filepath   >= 1.1.0.3 && < 1.2,
      haskell98  >= 1.0.1.0 && < 1.1,
      base       >= 4 && < 5,
      directory  >= 1.0.1.0 && < 1.1,
      HDBC       >= 2.2.6   && < 2.3,
      containers >= 0.3     && < 0.4    
