name:          Ampersand-Prototype
version:       2.1.0
author:        Stef Joosten
maintainer:    stef.joosten@ou.nl
synopsis:      Toolsuite for automated design of business processes.
description:   You can define your business processes by means of rules, written in Relation Algebra.
               Ampersand compiles this into functional specifications, which define an information system to support that business process.
               Behold: a genuine real world application of Relation Algebra, which is being used in industry.
homepage:      ampersand.sourceforge.net
category:      Database Design
stability:     alpha
Cabal-Version: >= 1.6
build-type:    Simple
license:       OtherLicense
copyright:     Stef Joosten

Executable prototype
  Main-Is:         Main.hs
  Hs-Source-Dirs:  src
  build-depends:
      ghc        >= 7.0 && < 8.0 ,
      Ampersand  >= 2.1.0  , 
      graphviz   >= 2999.11.0.0 && < 3000 ,
      HDBC-odbc  >= 2.2.3.2,  
      HDBC       >= 2.2.6   && < 2.3,
      bytestring >= 0.9.1.10 && < 0.10,
      utf8-string>= 0.3.6,
      filepath   >= 1.2 && < 1.3,
      haskell98  >= 1.1.0.1 && < 1.2,
      base       >= 4.3.1.0 && < 5,
      directory  >= 1.1 && < 1.2,
      containers >= 0.4     && < 0.5    
