name:                archiAnalyze
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/archiAnalyze#readme
license:             BSD3
license-file:        LICENSE
author:              Stef Joosten
maintainer:          stef.joosten@ou.nl
copyright:           2016 Stef Joosten
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable archiAnalyze
  hs-source-dirs:      src
  main-is:             archiAnalyze.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5 ,
                       hxt ,
                       pandoc ,
                       pandoc-types
